RESOLVED FIXED 79670
[CSSRegions]-webkit-flow-into initial value should be none instead of auto
https://bugs.webkit.org/show_bug.cgi?id=79670
Summary [CSSRegions]-webkit-flow-into initial value should be none instead of auto
Attachments
Patch (23.57 KB, patch)
2012-02-27 07:25 PST, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2012-02-27 07:25:31 PST
WebKit Review Bot
Comment 2 2012-02-27 12:37:07 PST
Comment on attachment 129034 [details] Patch Clearing flags on attachment: 129034 Committed r109015: <http://trac.webkit.org/changeset/109015>
WebKit Review Bot
Comment 3 2012-02-27 12:37:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.