[CSSRegions]-webkit-flow-into initial value should be none instead of auto https://bugs.webkit.org/show_bug.cgi?id=79670

Reviewed by Simon Fraser.

Source/WebCore:

No new tests, modified expectations for existing tests.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
* css/CSSParser.cpp:
(WebCore::CSSParser::parseFlowThread):
* css/CSSStyleApplyProperty.cpp:
(WebCore::CSSStyleApplyProperty::CSSStyleApplyProperty):

LayoutTests:

* fast/css/getComputedStyle/computed-style-expected.txt:
* fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* fast/regions/css-regions-disabled-expected.txt:
* fast/regions/script-tests/css-regions-disabled.js:
* fast/regions/script-tests/webkit-flow-parsing.js:
* fast/regions/webkit-flow-parsing-expected.txt:
* platform/chromium-mac-snowleopard/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/chromium-mac-snowleopard/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/chromium-mac-snowleopard/svg/css/getComputedStyle-basic-expected.txt:
* platform/chromium-win/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/chromium-win/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/chromium-win/svg/css/getComputedStyle-basic-expected.txt:
* platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/qt/svg/css/getComputedStyle-basic-expected.txt:
* svg/css/getComputedStyle-basic-expected.txt:


Canonical link: https://commits.webkit.org/96782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109015 268f45cc-cd09-0410-ab3c-d52691b4dbfc